--- a/lab_1/nginx/nginx.conf
+++ b/lab_1/nginx/nginx.conf
@@ -22,7 +22,7 @@ http {
 	more_set_headers "Server: clinic";
 
 
-    	sendfile        on;
+    	sendfile        off;
     	keepalive_timeout  65;
 
 
@@ -35,19 +35,20 @@ http {
 
 	# балансировка
 	upstream backend {
-      server 127.0.0.1:5000 max_fails=3 fail_timeout=30s weight=2;
-	server 127.0.0.1:5001 max_fails=1 fail_timeout=30s weight=1;
-	server 127.0.0.1:5001 max_fails=1 fail_timeout=30s weight=1;
+     server 127.0.0.1:5000 max_fails=3 fail_timeout=30s weight=2;
+	# server 127.0.0.1:5001 max_fails=1 fail_timeout=30s weight=1;
+	# server 127.0.0.1:5002 max_fails=1 fail_timeout=30s weight=1;
     	}
 
 	# для настройки http2(https) для всех запросов
 	ssl_certificate /Users/anastasialavrova/web/localhost.crt;
     	ssl_certificate_key /Users/anastasialavrova/web/localhost.key;
 	ssl_prefer_server_ciphers on;
+	
 
 	# 301 - редирект на https
 	server {
-        listen  80;
+        listen  81;
         return  301 https://$host$request_uri;
     	}
 	
@@ -55,9 +56,13 @@ http {
    
 
     	server {
-        	# listen       8080;
-		listen       443 ssl http2 default_server;
+		#listen *:80 default_server;
+        	# listen 8080;
+		listen 443 ssl http2;
+		# listen 443 default ssl;
         	server_name  localhost;
+
+		http2_push_preload on;
 
 
 		access_log /Users/anastasialavrova/web/access.log;
@@ -83,10 +88,14 @@ http {
 
       	location / {
            		root   /Users/anastasialavrova/web/;
-	     			http2_push /img/image.jpg;
+	     			http2_push /img/cat.jpg;
+				http2_push /html.jpg;
+				http2_push_preload on;
 	    			# try_files $uri $uri/ index.html;
            		# index  index.html index.htm;
       	}
+
+
 
 
 		location /test/ {
